--- a/templates/index.html
+++ b/templates/index.html
@@ -94,7 +94,7 @@
         function(d){
             $("#dimmer").val(d);
         });
-    }, 5000);
+    }, 15000);
 
     </script>
 
@@ -157,9 +157,9 @@
             text-align: center;
         }
 
-        .rangeWrap
-            width: 100%;
-            padding: 15px;
+        .rangeWrap {
+            width: 80%;
+            padding: 10%;
         }
         input[type='range'] {
             width: 100%;
