added alarm class, so that I can set the alarm only once, and it'll just go off every weekday at that time

--- a/templates/index.html
+++ b/templates/index.html
@@ -178,9 +178,8 @@
             clear: both;
             margin-bottom: 15px;
         }
-        img.clock.disabled {
-            opacity: 0.15;
-        }
+        img.clock.disabled { opacity: 0.15; }
+        img.clock.enabled {  opacity: 0.50; }
     </style>
 
 </head>
