--- a/templates/alarm.html
+++ b/templates/alarm.html
@@ -2,8 +2,11 @@
 {% block alarm %}
             <h3>alarm</h3>
             <hr>
-            <!--<img src="static/sunrise.png" class='clock'>-->
+            {% if not at %}
             <img src="static/clock.png" class='clock disabled' id='clock' >
+            {% else %}
+            <img src="static/clock.png" class='clock enabled' id='clock' >
+            {% endif %}
             <br>
             <p>Is currently <strong id='alarmStatus'>
             {% if not at %}
